星5段階評価

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -27,6 +27,9 @@
         <%= f.label :body, 'Opinion' %>
         <%= f.text_area :body,class: "form-control" %>
       </div>
+      
+      <%= render 'commons/raty', book: @book %>
+       
       <%= f.submit 'Update Book', class: "btn btn-success"%>
       
     <% end %>
