--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,6 +20,9 @@
           <td>
             <p>コメント数：<%= @book.comments.count %></p>
           </td>
+          <td width="180px">
+            <%= render 'commons/raty', book: @book %>
+          </td>
           <% if @user.id == current_user.id %>
           <td>
             <%=link_to "Edit",  edit_book_path(@book), class: "btn btn-sm btn-success" %>
