--- a/app/views/commons/_common.html.erb
+++ b/app/views/commons/_common.html.erb
@@ -78,6 +78,22 @@
         <%= f.label :opinion %>
         <%= f.text_area :body ,class: "form-control" %><br>
       </div>
+      
+      <div class="form-group" id="star">
+        <%= f.hidden_field :rate, id: :review_star %>
+      </div>
+      
+      <script>
+       $('#star').raty({
+         size     : 36,
+         starOff:  '<%= asset_path('star-off.png') %>',
+         starOn : '<%= asset_path('star-on.png') %>',
+         starHalf: '<%= asset_path('star-half.png') %>',
+         scoreName: 'book[rate]',
+         half: true,
+       });
+       </script>
+
       <div class="form-group">
         <%= f.submit 'Create Book' , class: "btn btn-success"%>
       </div>
