--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,6 +23,13 @@
       <td><%= link_to image_tag(book.user.get_profile_image(100,100)),user_path(book.user_id) %></td>
       <td><%= link_to book.title, book_path(book) %></td>
       <td><%= book.body%></td>
+      
+      <td>
+        <% book.tags.each do |tag| %>
+           <li style="list-style: none;"><%=tag.name%></li>
+        <% end %>
+      </td>
+      
       <td>
         <div id = "index_like_<%= book.id %>">
           <%= render 'favorites/favorite', book: book %>
