--- a/app/views/commons/_common.html.erb
+++ b/app/views/commons/_common.html.erb
@@ -74,9 +74,15 @@
         <%= f.label :title %>
         <%= f.text_field :title ,class: "form-control"  %>
       </div>
+      
       <div class="form-group">
         <%= f.label :opinion %>
         <%= f.text_area :body ,class: "form-control" %><br>
+      </div>
+      
+      <div class="form-group">
+        <%= f.label :Tag %>
+        <%= f.text_field :name, class: 'form-control book_tag_name' %>
       </div>
       
       <div class="form-group" id="star">
