--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,13 @@
         <% end %>
       </div>
     <% end %>
+    <div class="container">
+      <div class="row justify-content-start mb-2">
+        <div class="mr-3"><%= render 'searches/search' %></div>
+        <div class="mr-3"><%= render "searches/tag_form" %></div>
+      </div>
+     </div>
     
-    <%= render 'searches/search' %>
     
     <%= yield %>
   </body>
