--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -12,16 +12,10 @@
       </thead>
   
       <tbody>
-        <% @users.each do |user| %>
-          <tr>
-            <td><%= image_tag user.get_profile_image(100, 100) %></td>
-            <td><%= user.name %></td>
-            <td><%= link_to "Show", user, class: "user_#{user.id}" %></td>
-          </tr>
-        <% end %>
+        <%= render 'users/index', users: @users %>
       </tbody>
   
-    <% else %>
+    <% elsif @range == "Book" || @range == 'Tag' %>
   
    
       <thead>
@@ -34,19 +28,7 @@
       </thead>
   
       <tbody>
-        <% @books.each do |book| %>
-          <tr>
-            <td>
-              <%= link_to(book.user) do %>
-              <%= image_tag book.user.get_profile_image(100, 100) %>
-              <% end %>
-            </td>
-            <td>
-              <%= link_to book.title, book, class: "book_#{book.id}" %>
-            </td>
-            <td><%= book.body %></td>
-          </tr>
-        <% end %>
+        <%= render 'books/index' ,books: @books %>
       </tbody>
     <% end %>
   </table>
