--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,26 +15,11 @@
         </tr>
        </thead>
   
-    <% @users.each do |user| %>
+    
       <tbody>
-         <tr>
-           <td><%= image_tag user.get_profile_image(100,100) %></td>
-           <td> <%= user.name %></td>
-           <td><p>フォロー数：<%= user.followings.count  %></p></td>
-           <td><p>フォロワー数：<%= user.followers.count %></p></td>
-           <td>
-            <% if current_user != user %>
-              <% if current_user &. has_followed?(user) %>
-                <%= link_to 'フォロー外す',user_unfollows_path(user), data: {method: 'post' } %>
-              <% else %>
-                <%= link_to 'フォローする', user_follows_path(user), data: {method: 'post'} %>
-              <% end %>
-            <% end %>
-           </td>
-           <td><%= link_to "Show", user_path(user) %></td>
-         </tr>
+        <%= render 'index', users: @users %>
       </tbody>
-    <% end %>
+   
     </table>
   </div>
   </div>
